ops/kubernetes/allow-admin-dashboard.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-admin-dashboard
  namespace: attitudes-admin
spec:
  selector:
    matchLabels:
      app: dashboard-admin
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/attitudes-admin/sa/default"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
