ops/kubernetes/allow-cio-dashboard.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-cio-dashboard
  namespace: attitudes-cio
spec:
  selector:
    matchLabels:
      app: dashboard-cio
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/attitudes-cio/sa/default"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
