ops/kubernetes/deny-all-admin.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: attitudes-admin
spec:
  {}
