ops/kubernetes/deny-all-cio.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: attitudes-cio
spec:
  {}
