ops/kubernetes/deny-all-client.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: attitudes-client
spec:
  {}
