ops/kubernetes/deny-all-customer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: attitudes-customer
spec:
  {}
