ops/kubernetes/deny-all-fournisseur.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: attitudes-fournisseur
spec:
  {}
