ops/kubernetes/deny-all-invite.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: attitudes-invite
spec:
  {}
